--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-# Code::Blocks project files
+﻿# Code::Blocks project files
 *.depend
 *.layout
+.directory
 
 # other targets from building
 parser.cc
 lexer.cc
 parser.h
 parser.output
+
+# binary targets
+obj/*
+bin/*
+
+# backup files
+*~
