Rework the project folder layout; fix an issue in the make file with a .h vs .hh discrepancy causing incomplete makes; document lists.hh and split a line causing style warnings into 2; ignore warnings in src/parser.cc since the code is from bison

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,13 @@
 *.layout
 *.kdev4
 .directory
+.project
+.cproject
 Issues
 
 # other targets from building
 parser.cc
 lexer.cc
-parser.h
 parser.output
 ast-cc
 *.rpt
@@ -25,3 +26,5 @@ bin/*
 
 # directories
 .kdev4
+/bin/
+.settings/*
